fix dark mode for black color

--- a/src/client/src/components/think_session/thinkSessionItem.scss
+++ b/src/client/src/components/think_session/thinkSessionItem.scss
@@ -44,6 +44,10 @@
   margin: -0.1rem 0 0 -0.1rem;
 }
 
+.no-location {
+  display: none;
+}
+
 .think-session-icon {
   height: 1.5rem;
   width: 1.5rem;
